fixed spacing

--- a/Stuff/css/main.css
+++ b/Stuff/css/main.css
@@ -21,7 +21,7 @@ table {
     color: #FFFFFF;
     margin-top: 5%;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 1px;
 }
 
 
@@ -34,5 +34,5 @@ td {
     color: #FFFFFF;
     margin-top: 5%;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 1px;
 }
